--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/measure"
+        android:id="@+id/measure"
+        android:layout_gravity="center_horizontal"/>
+
 </FrameLayout>
