--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="camera_menu_background">#111111</color>
     <color name="camera_menu_btn_ripple">#F29FF8B0</color>
     <color name="camera_menu_btn_tint">#69E781</color>
-    <color name="clear_btn_text">#69E781</color>
+    <color name="clear_btn_text">#FFFFFF</color>
     <color name="info_ripple_green">#AB76FF03</color>
     <color name="info_ripple_yellow">#FFFF8D</color>
     <color name="info_ripple_red">#EF5350</color>
