--- a/app/src/main/res/layout/layout_single_list_item.xml
+++ b/app/src/main/res/layout/layout_single_list_item.xml
@@ -26,7 +26,6 @@
             android:adjustViewBounds="true"
             android:padding="0dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/favorite_img_4"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
 
@@ -73,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="₪ 50"
+                android:text="Item Price"
                 android:textColor="#000"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
