--- a/app/src/main/res/layout/hand_layout.xml
+++ b/app/src/main/res/layout/hand_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.huji.couchmirage.CustomMotionView
+    <com.huji.couchmirage.ar.CustomMotionView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:foregroundGravity="center"
