--- a/app/src/main/res/layout/item_details_activity.xml
+++ b/app/src/main/res/layout/item_details_activity.xml
@@ -41,7 +41,6 @@
                     />
 
 
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -113,10 +112,18 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/item_category"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="CHAIRS"
+                            android:textColor="#7CB342"
+                            android:textSize="14sp" />
+
+                        <TextView
                             android:id="@+id/model_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
                             android:fontFamily="@font/calibri"
                             android:text="RENBERGET"
                             android:textColor="#000000"
@@ -131,6 +138,17 @@
                             android:textColor="#86E44A"
                             android:textSize="16sp"
                             android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/item_color"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:fontFamily="@font/calibri"
+                            android:text="white"
+                            android:textColor="@color/btn_context_menu_pressed"
+                            android:textSize="14sp"
+                            android:textStyle="italic" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -160,9 +178,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
+                android:gravity="center"
                 android:text="Description"
                 android:textSize="18sp"
-                android:gravity="center"
                 android:textStyle="bold" />
 
             <TextView
