when will brahan finish?

--- a/app/src/main/res/layout/layout_department_single_list_item.xml
+++ b/app/src/main/res/layout/layout_department_single_list_item.xml
@@ -48,13 +48,15 @@
                 android:id="@+id/department_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:fontFamily="@font/calibri"
-                android:text="Plant"
+                android:gravity="start"
+                android:text="BABY &amp; CHILDREN PRODUCTS"
                 android:textColor="#3C3C3C"
                 android:textSize="12sp"
-
+                android:maxWidth="120dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -66,12 +68,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
+                android:layout_marginLeft="40dp"
                 android:src="@drawable/ic_arrow_forward_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/department_name"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
