--- a/app/src/main/res/layout/item_details_activity.xml
+++ b/app/src/main/res/layout/item_details_activity.xml
@@ -94,74 +94,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="16dp"
-                android:weightSum="100">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="50">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/item_category"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:text="CHAIRS"
-                            android:textColor="#7CB342"
-                            android:textSize="14sp" />
-
-                        <TextView
-                            android:id="@+id/model_title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/calibri"
-                            android:text="RENBERGET"
-                            android:textColor="#000000"
-                            android:textSize="24sp" />
-
-                        <TextView
-                            android:id="@+id/price_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/calibri"
-                            android:text="245 ₪"
-                            android:textColor="#86E44A"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/item_color"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:fontFamily="@font/calibri"
-                            android:text="white"
-                            android:textColor="@color/btn_context_menu_pressed"
-                            android:textSize="14sp"
-                            android:textStyle="italic" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="50">
-
-
-                </LinearLayout>
-
-            </LinearLayout>
+            <include layout="@layout/item_details_title" />
 
             <View
                 android:layout_width="200dp"
@@ -171,27 +104,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="#dedede" />
 
-
-            <TextView
-                android:id="@+id/description_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:gravity="center"
-                android:text="Description"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/calibri"
-                android:padding="16dp"
-                android:text="Item Description"
-                android:textColor="#444444"
-                android:textSize="16sp" />
+            <include layout="@layout/item_details_description" />
 
 
         </LinearLayout>
