--- a/app/src/main/res/layout/item_details_good_to_know.xml
+++ b/app/src/main/res/layout/item_details_good_to_know.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/descrption_view"
+    android:id="@+id/good_to_know_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
     <TextView
-        android:id="@+id/description_title"
+        android:id="@+id/good_to_know_title"
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginLeft="10dp"
         android:gravity="left"
-        android:text="Description"
+        android:text="Good to know"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/show_description"
+        app:layout_constraintEnd_toStartOf="@id/show_good_to_know"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/show_description"
+        android:id="@+id/show_good_to_know"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="4dp"
@@ -30,28 +30,28 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
         android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/description"
+        app:layout_constraintBottom_toBottomOf="@+id/good_to_know"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/description_title"
+        app:layout_constraintTop_toTopOf="@+id/good_to_know_title"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/good_to_know"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/calibri"
         android:padding="16dp"
-        android:text="Item Description"
+        android:text="@string/default_text"
         android:textColor="#444444"
         android:textSize="16sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/description_title"
+        app:layout_constraintEnd_toEndOf="@+id/good_to_know_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_title"
+        app:layout_constraintTop_toBottomOf="@+id/good_to_know_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
