--- a/app/src/main/res/layout/layout_single_list_item.xml
+++ b/app/src/main/res/layout/layout_single_list_item.xml
@@ -72,7 +72,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="0 x 0 x 0"
-                android:textColor="#7CB342"
+                android:textColor="#00897B"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -87,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:text="Item Price"
-                android:textColor="#000"
+                android:textColor="#86E44A"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Item Color"
-                android:textColor="#000"
+                android:textColor="@color/btn_context_menu_pressed"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
