--- a/app/src/main/res/layout/layout_single_list_item.xml
+++ b/app/src/main/res/layout/layout_single_list_item.xml
@@ -69,7 +69,7 @@
 
                 android:id="@+id/item_sizes"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="0 x 0 x 0"
