--- a/app/src/main/res/layout/items_loading_animation.xml
+++ b/app/src/main/res/layout/items_loading_animation.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/animation"
+    android:id="@+id/load_animation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_above="@+id/size_changer"
@@ -11,6 +11,8 @@
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:layout_marginTop="0dp"
+    android:backgroundTint="#FFFFFF"
+    android:background="#FFFFFF"
     android:layout_marginBottom="0dp"
     android:foregroundGravity="center"
     android:visibility="invisible">
