--- a/app/src/main/res/layout/open_camera.xml
+++ b/app/src/main/res/layout/open_camera.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/open_camera_layout"
     tools:context=".OpenCameraActivity">
 
     <include layout="@layout/camera_top_panel" />
