working on instuction page

--- a/app/src/main/res/layout/greeting_activity.xml
+++ b/app/src/main/res/layout/greeting_activity.xml
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
-    tools:context=".instructions.GreetingActivity">
+    android:orientation="vertical">
 
-    <LinearLayout
+
+
+    <FrameLayout
+        android:id="@+id/frag"
+        android:name="com.example.sandy.kotlinfragment.HomeFrag"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="0.9" />
 
-        <Button
-            android:id="@+id/to_measurement"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:background="@color/btn_send_normal"
-            android:fontFamily="sans-serif-thin"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="24sp" />
 
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
