--- a/app/src/main/res/layout/camera_top_panel.xml
+++ b/app/src/main/res/layout/camera_top_panel.xml
@@ -41,5 +41,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.huji.couchmirage.greetings.SquareImageButton
+        android:id="@+id/help_btn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:scaleType="centerCrop"
+
+        android:src="@drawable/ic_help"
+
+        android:foregroundGravity="fill_horizontal|top"
+        android:textColor="@color/camera_menu_btn_tint"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
