--- a/app/src/main/res/layout/open_camera.xml
+++ b/app/src/main/res/layout/open_camera.xml
@@ -1,36 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/open_camera_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/open_camera_layout"
     tools:context=".OpenCameraActivity">
 
-    <include layout="@layout/camera_top_panel" />
-
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.huji.couchmirage.ar.MyArFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottomPanel"
-        android:layout_below="@+id/topPanel"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center"
-        android:layout_marginStart="-11dp"
-        android:layout_marginBottom="-107dp"
-        app:layout_anchorGravity="bottom|right|end"
-        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
+    <include
+        android:id="@+id/include3"
+        layout="@layout/camera_top_panel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <include layout="@layout/camera_bottom_scale" />
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.huji.couchmirage.ar.MyArFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/topPanel"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="80dp"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
-    <include layout="@layout/camera_bottom_panel" />
-
-    <include layout="@layout/camera_loading_animation" />
+            />
 
 
-</RelativeLayout>
+        <include
+
+            layout="@layout/camera_loading_animation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="80dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    <include
+        layout="@layout/camera_bottom_scale"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include3"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <include
+        layout="@layout/camera_bottom_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
